Fixed layout issue in room UI. Set scroll to top on leave.

--- a/web-static/less/style.less
+++ b/web-static/less/style.less
@@ -149,7 +149,7 @@ footer {
   height: 100%;
   margin-top: -34px;
   padding-top: 48px;
-  padding-bottom: 0px;
+  margin-bottom: 54px;
   width: 100%;
 }
 
